# wgsl-poseidon

./: .gitignore  Cargo.toml  README.md  index.html
.github/workflows/: npm-gulp.yml  publish.yml
src/: bigint.wgsl  bn254.rs  codegen.rs  constants_test.wgsl  fft.rs  fr.wgsl  gen_constants_wgsl.rs  gpu.rs  lib.rs  poseidon.rs  poseidon_t2.wgsl  structs.wgsl  t2_constants.wgsl  tests.rs  utils.rs  wgsl.rs
src/snippets/: poseidon_t2_main.wgsl
src/wgsl/: bigint.wgsl  constants_test.wgsl  fr.wgsl  multi_pow_5.wgsl  poseidon_t2.wgsl  storage.wgsl  structs.wgsl  two_buffer.wgsl
web/: app.ts  index.html  package-lock.json  package.json  poseidon_constants.js  poseidon_reference.js  shader.wgsl
