[package]
name = "wgsl-poseidon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu = "0.16.2"
pollster = "0.2"
futures-intrusive = "0.4"
bytemuck = "1.13"
stopwatch = "0.0.7"
num-bigint = { version = "0.4.3", features = ["rand"] }
num-traits = "0.2.15"
rand = "0.8.5"
itertools = "0.11.0"
ark-ec = "0.4.0"
ark-ff = "0.4.0"
ark-bn254 = "0.4.0"
poseidon-ark = { git = "https://github.com/arnaucube/poseidon-ark.git" }
naga = "0.12.3"

[[bin]]
edition = "2021"
name = "gen_constants_wgsl"
path = "src/gen_constants_wgsl.rs"
